c8o-kubernetes.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: couchdb-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
      - name: couchdb
        image: couchdb
        volumeMounts:
        - mountPath: "/opt/couchdb/data"
          name: couchdb-volume
        ports:
        - containerPort: 5984
          name: couchdb
      volumes:
        - name: couchdb-volume
          persistentVolumeClaim:
            claimName: couchdb-volume-claim          
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: convertigo
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: convertigo
    spec:
      containers:
      - name: convertigo
        image: convertigo:latest
        volumeMounts:
        - mountPath: "/workspace"
          name: c8o-workspace-volume
        ports:
        - containerPort: 28080
      volumes:
      - name: c8o-workspace-volume
        persistentVolumeClaim:
          claimName: c8o-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: c8o-front
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 28080
  selector:
    app: convertigo
---
apiVersion: v1
kind: Service
metadata:
  name: c8o-couchdb
spec:
  type: LoadBalancer
  ports:
  - port: 5984
    targetPort: 5984
  selector:
    app: couchdb
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: c8o-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  tls:
  - hosts:
    - demo-c8o.westeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: demo-c8o.westeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: c8o-front
          servicePort: 80
        path: /
